--- a/style/style.css
+++ b/style/style.css
@@ -49,10 +49,11 @@ body {
   text-decoration: underline;
 }
 
-.cardsDiv {
+/* .cardsDiv {
   display: inline-grid;
   height: 100%;
   justify-items: center;
+  align-content: center;
   column-gap: 1rem;
   grid-template-columns: repeat(4, 1fr);
-}
+} */
