--- a/style/style.css
+++ b/style/style.css
@@ -2,8 +2,9 @@ body {
   width: 100%;
   background: linear-gradient(
     to bottom,
-    rgba(252, 252, 8, 0.2),
-    rgba(0, 0, 255, 0.174)
+    rgba(157, 157, 156, 0.626),
+    rgba(0, 0, 255, 0.285),
+    rgba(0, 200, 25, 0.285)
   );
 }
 
@@ -49,11 +50,82 @@ body {
   text-decoration: underline;
 }
 
-/* .cardsDiv {
-  display: inline-grid;
-  height: 100%;
-  justify-items: center;
-  align-content: center;
-  column-gap: 1rem;
-  grid-template-columns: repeat(4, 1fr);
-} */
+/* Login form*/
+
+.login {
+  max-width: 800px;
+  margin: 50px auto;
+  position: relative;
+}
+.login .title {
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  font-size: 3.2em;
+  line-height: 48px;
+  padding-bottom: 48px;
+  color: #5543ca;
+  background: #5543ca;
+  background: -moz-linear-gradient(left, #f4524d 0%, #5543ca 100%) !important;
+  background: -webkit-linear-gradient(
+    left,
+    #f4524d 0%,
+    #5543ca 100%
+  ) !important;
+  background: linear-gradient(to right, #f4524d 0%, #5543ca 100%) !important;
+  -webkit-background-clip: text !important;
+  -webkit-text-fill-color: transparent !important;
+}
+
+.contact-form .form-field {
+  position: relative;
+  margin: 32px 0;
+}
+.contact-form .input-text {
+  display: block;
+  width: 100%;
+  height: 36px;
+  border-width: 0 0 2px 0;
+  border-color: #5543ca;
+  font-size: 18px;
+  line-height: 26px;
+  font-weight: 400;
+}
+.contact-form .input-text:focus {
+  outline: none;
+}
+.contact-form .input-text:focus + .label,
+.contact-form .input-text.not-empty + .label {
+  -webkit-transform: translateY(-24px);
+  transform: translateY(-24px);
+}
+.contact-form .label {
+  position: absolute;
+  left: 20px;
+  bottom: 11px;
+  font-size: 18px;
+  line-height: 26px;
+  font-weight: 400;
+  color: #5543ca;
+  cursor: text;
+  transition: -webkit-transform 0.2s ease-in-out;
+  transition: transform 0.2s ease-in-out;
+  transition: transform 0.2s ease-in-out, -webkit-transform 0.2s ease-in-out;
+}
+.contact-form .submit-btn {
+  display: inline-block;
+  background-color: #000;
+  background-image: linear-gradient(125deg, #a72879, #064497);
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-size: 16px;
+  padding: 8px 16px;
+  border: none;
+  width: 200px;
+  cursor: pointer;
+}
+
+.carousel {
+  transition: all 0.2s ease-in-out;
+}
