--- a/style/carousel.css
+++ b/style/carousel.css
@@ -39,18 +39,19 @@ body {
   margin-bottom: 10px;
 }
 
+/* Login form */
 .login {
-  max-width: 800px;
+  max-width: 200px;
   margin: 50px auto;
   position: relative;
 }
 .login .title {
   text-align: center;
   text-transform: uppercase;
-  letter-spacing: 3px;
-  font-size: 3.2em;
+  letter-spacing: 4px;
+  font-size: 2.2em;
   line-height: 48px;
-  padding-bottom: 48px;
+  padding-bottom: 10px;
   color: #5543ca;
   background: #5543ca;
   background: -moz-linear-gradient(left, #f4524d 0%, #5543ca 100%) !important;
@@ -66,7 +67,7 @@ body {
 
 .contact-form .form-field {
   position: relative;
-  margin: 32px 0;
+  margin: 10px 0;
 }
 .contact-form .input-text {
   display: block;
