--- a/style/style.css
+++ b/style/style.css
@@ -129,3 +129,25 @@ body {
   width: 200px;
   cursor: pointer;
 }
+
+#listContainer .row .col img {
+  width: 40%;
+  border-radius: 25px;
+  margin: 0;
+}
+#listContainer .border-row {
+  border: solid #d0d3d6 0.1rem;
+  border-radius: 25px;
+}
+
+#listContainer .col {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* .displaybtn {
+  display: flex;
+  align-items: center;
+  justify-content: left;
+} */
