--- a/style/style.css
+++ b/style/style.css
@@ -16,6 +16,10 @@ body {
   width: 30%;
 }
 
+nav {
+  position: sticky;
+}
+
 .card {
   margin: 0 auto;
   float: none;
@@ -145,9 +149,3 @@ body {
   align-items: center;
   justify-content: center;
 }
-
-/* .displaybtn {
-  display: flex;
-  align-items: center;
-  justify-content: left;
-} */
