--- a/style/carousel.css
+++ b/style/carousel.css
@@ -117,3 +117,15 @@ body {
   width: 200px;
   cursor: pointer;
 }
+
+.navbar ul li a:hover {
+  color: rgb(251, 68, 68);
+}
+
+.navbar-brand:hover {
+  color: rgb(251, 68, 68);
+}
+
+.navbar img {
+  width: 15%;
+}
