--- a/style/style.css
+++ b/style/style.css
@@ -149,3 +149,15 @@ nav {
   align-items: center;
   justify-content: center;
 }
+
+.navbar ul li a:hover {
+  color: rgb(251, 68, 68);
+}
+
+.navbar-brand:hover {
+  color: rgb(251, 68, 68);
+}
+
+.navbar img {
+  width: 15%;
+}
