--- a/style/style.css
+++ b/style/style.css
@@ -345,3 +345,26 @@ h2 {
     opacity: 0.8;
   }
 }
+
+/*Divier*/
+.divider {
+  position: relative;
+  /* margin-top: 90px; */
+  height: 1px;
+}
+
+.div-transparent:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 5%;
+  right: 5%;
+  width: 100%;
+  height: 2px;
+  background-image: linear-gradient(
+    to right,
+    transparent,
+    rgb(48, 49, 51),
+    transparent
+  );
+}
